# dearmeta

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: statistical_assumptions.md
scripts/: analysis.R  bootstrap.sh  install-renv.R  install.R  prime-bioconductor.R
src/dearmeta/: __init__.py  cli.py  configure.py  files.py  geo.py  logging_utils.py  run_r.py
src/dearmeta/data/: __init__.py  analysis.R  install.R
tests/: test_configure.py  test_files.py  test_geo_models.py
