[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dearmeta"
version = "0.1.0"
description = "Command-line toolkit for downloading and analysing Illumina EPIC GEO methylation datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DearMeta Developers" }
]
dependencies = [
  "typer>=0.9.0",
  "pydantic>=1.10,<2.0",
  "pandas>=1.5",
  "requests>=2.31",
  "tqdm>=4.66",
  "rich>=13.6",
  "numpy>=1.23"
]

[project.scripts]
dearmeta = "dearmeta.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-mock>=3.11",
  "requests-mock>=1.11",
  "ruff>=0.2",
  "mypy>=1.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dearmeta = ["data/*.R"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
